--- a/index.html
+++ b/index.html
@@ -10,55 +10,39 @@
 </head>
 <body class="dtk-theme-blackbg">	
 	<div>
-		<div class="menuSection dtk-menu-sticky dtk-theme-blackbg">
+		<div class="menuSection dtk-menu-sticky dtk-theme-blackbg" >
 			<div class="menuItems">
 				<div class="menuItem left">
 					<div class="subMenuItem left" style="display:inline-block;">
-						<h1 style="margin:0px;">Dejai's Adventures</h1>
+						<h1 style="margin:0px;" class="pointer">
+							<span id="homeIcon2" style="font-size:smaller;"> Dejai's Adventures</span>
+						</h1>
 					</div>
 					<div class="subMenuItem right">
-						<div class="searchSection hidden showOnAdventuresLoaded">
-							<div id="searchBarSection" class="searchBarSection hidden showOnAdventuresLoaded">
-								<div id="searchBar" class="searchBar searchPlaceholder" data-adv-placeholder="Search adventures ..." contenteditable="true" onkeyup="onSearchAdventures()" onfocus="onSearchFocus()" onblur="onSearchBlur()"></div>
+						<div class="searchSection hidden2 showOnAdventuresLoaded">
+							<div id="searchBarSection" class="searchBarSection hidden2 showOnAdventuresLoaded">
+								<div id="searchBar" class="searchBar searchPlaceholder" data-adv-placeholder="Search adventures ..." contenteditable="true" onkeyup="onSearchAdventures()" onfocus="onSearchFocus()" onblur="onSearchBlur()">
+									Search adventures ...
+								</div>
 								<i id="searchClearIcon" class="fa fa-times-circle pointer hidden" aria-hidden="true" style="color:red;" onclick="onClearSearch()"></i>
 							</div>
-							<i id="randomAdventure" class="fa fa-random pointer" onclick="onSelectRandomAdventure()" style="font-size:18px; padding-top:2%; color:orange;" aria-hidden="true" title="Select a random adventure">
-								&nbsp;Random Adventure
-							</i>
+							<i id="randomAdventureIcon" class="fa fa-random pointer" onclick="onSelectRandomAdventure()" aria-hidden="true" title="Select a random adventure"></i> 
+							<span id="randomAdventureText">Random Adventure</span>
 						</div>
 					</div>
 				</div>
 				<div class="menuItem right">
 					<p id="loginSection" style="color:orange;">		
-						<a class="authLink dlf_href_notextdec" href="" style="margin:0px;color:inherit;font-size: smaller;"></a>
+						<a class="authLink dtk-href-no-textdec" href="" style="margin:0px;color:inherit;font-size: smaller;"></a>
 					</p>
 				</div>
 			</div>
 			<br style="clear:both;"/>
 		</div>
 
-		<div class="dtk-menu-sticky dtk-theme-blackbg" style="display:none;">
-			
-			<div class="titleSection" style="clear:both;">
-				<h1 class="title">Dejai's Adventures!</h1>
-				<p style="clear:both;">A set of adventures, enjoyed with family & friends!</p>
-			</div>
-			<div id="findAdventureSection" style="clear:both;" class="lefted">
-				<div class="searchSection hidden showOnAdventuresLoaded">
-					<div id="searchBarSection" class="searchBarSection hidden showOnAdventuresLoaded">
-						<div id="searchBar" class="searchBar searchPlaceholder" data-adv-placeholder="Search adventures ..." contenteditable="true" onkeyup="onSearchAdventures()" onfocus="onSearchFocus()" onblur="onSearchBlur()"></div>
-						<i id="searchClearIcon" class="fa fa-times-circle pointer hidden" aria-hidden="true" style="color:red;" onclick="onClearSearch()"></i>
-					</div>
-					<i id="randomAdventure" class="fa fa-random pointer" onclick="onSelectRandomAdventure()" style="font-size:18px; padding-top:2%; color:orange;" aria-hidden="true" title="Select a random adventure">
-						&nbsp;Random Adventure
-					</i>
-				</div>
-			</div>
-		</div>
-		<div id="thumbnailPanel">
-		</div>
 		<div id="adventuresPanel" style="width:95%; margin:auto; overflow-y:scroll;">
 		</div>
+		
 		<p class="hideOnLoaded" style="text-align:center;">
 			<img id="loading_gif" src="https://dejai.github.io/scripts/assets/img/loading1.gif" style="width:10%;height:10%;">
 		</p>
