--- a/auth/login.html
+++ b/auth/login.html
@@ -10,7 +10,7 @@
 <body class="dtk-theme-blackbg">
     <div class="centered dtk-center-block-large">
         <h1>Login</h1>
-        <iframe class="hidden dtk-frame" id="dtk-LoginFrame"></iframe>
+        <iframe class="hidden" id="dtk-LoginFrame" style="border:none;"></iframe>
     </div>
 </body>
     <script src="https://dejai.github.io/scripts/js/common/my.js?v=1"></script>
