--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 			<div class="menuItem">
 				<div class="searchSection hidden2 showOnAdventuresLoaded">
 					<div id="searchBarSection" class="searchBarSection hidden2 showOnAdventuresLoaded">
-						<div id="searchBar" class="searchBar searchPlaceholder" data-adv-placeholder="Search adventures ..." contenteditable="true" onkeyup="onSearchAdventures()" onfocus="onSearchFocus()" onblur="onSearchBlur()">
-							Search adventures ...
-						</div>
+						<input id="searchBarInput" type="text" placeholder="Search adventures ... " onkeyup="onSearchAdventures()">
 						<i id="searchClearIcon" class="fa fa-times-circle pointer hidden" aria-hidden="true" style="color:red;" onclick="onClearSearch()"></i>
 					</div>
 					<i id="randomAdventureIcon" class="fa fa-random pointer" onclick="onSelectRandomAdventure()" aria-hidden="true" title="Select a random adventure"></i> 
