--- a/adventure/index.html
+++ b/adventure/index.html
@@ -46,7 +46,7 @@
 
 	<!-- The back button when looking at content or description -->
 	<div id="subMenuSection" class="hidden showOnContentView showOnDescriptionView hideOnListView showOnError" >
-		<span id="backIconSection" onclick="onBack()">
+		<span id="backIconSection" class="pointer" onclick="onBack()">
 			<i id="backIcon" class="pointer fa-solid fa-share"></i>&nbsp;Back
 		</span>
 		<span id="contentTitle" class="hidden centered showOnContentView hideOnDescriptionView"></span> 
