Fix URL path for common script

--- a/auth/logout.html
+++ b/auth/logout.html
@@ -11,7 +11,7 @@
     <p class="hidden showOnLogoutFail">Issue with Logging out.</p>
     <button class="hidden showOnLogoutFail" onclick="history.back()">Go back</button>
 </body>
-    <script src="https://dejai.github.io/scripts/js/common/my.js"></script>
+    <script src="https://dejai.github.io/scripts/js/v2/my.js"></script>
     <script>
         MyDom.ready( async ()=> {
             // Run the code for on logout
