--- a/auth/login.html
+++ b/auth/login.html
@@ -13,7 +13,7 @@
         <iframe class="hidden" id="dtk-LoginFrame" style="border:none;"></iframe>
     </div>
 </body>
-    <script src="https://dejai.github.io/scripts/js/common/my.js?v=1"></script>
+    <script src="https://dejai.github.io/scripts/js/v2/my.js?v=1"></script>
     <script>
         MyDom.ready( async ()=> {
             // Run the onLogin logic
