--- a/adventure/index.html
+++ b/adventure/index.html
@@ -29,11 +29,18 @@
 				</h3> 
 			</div>
 		</div>
-		<div class="menuLogin">
-			<a class="authLink dtk-href-no-textdec" href="">
-			</a>
+		<div id="userIconSection" class="pointer">
+			<span class="userName desktop" onclick="toggleSideNav()"></span>
+			<i class="fa-solid fa-circle-user login iconSize" style="cursor:pointer;" onclick="toggleSideNav()"></i>
 		</div>
 		<hr class="menuSeparator" style="clear:both;"/>
+	</div>
+
+	<!-- The side nav section -->
+	<div class="sideNav right">
+		<i class="fa-solid fa-xmark closeIcon" onclick="toggleSideNav()"></i>
+		<span class="userName mobile navRow"></span>
+		<a class="authLink navRow navItem dtk-href-no-textdec" href="auth/?action=0" target="_top"></a>
 	</div>
 
 	<!-- Messages related to the adventure/content -->
@@ -59,7 +66,7 @@
 	</div>
 
 	<!-- The Content List Section -->
-	<div id="contentListSection" class="centered hidden showOnContentLoaded showOnListView hideOnDescriptionView hideOnContentView">
+	<div id="contentListSection" class="centered hidden toggleOnSideNavMobile showOnContentLoaded showOnListView hideOnDescriptionView hideOnContentView">
 	</div>
 
 	<!-- The Content View section -->
@@ -81,6 +88,7 @@
 <script src="https://dejai.github.io/scripts/js/v2/trellowrapper.js?v=2"></script>
 <script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2"></script>
 <!-- My Adventure code -->
-<script type="text/javascript" src="src/js/models.js?v=2"></script>
-<script type="text/javascript" src="src/js/adventure.js?v=2"></script>
+<script type="text/javascript" src="src/js/models.js?v=1"></script>
+<script type="text/javascript" src="src/js/menu.js?v=1"></script>
+<script type="text/javascript" src="src/js/adventure.js?v=1"></script>
 </html>
