Adjust form experience

--- a/events/index.html
+++ b/events/index.html
@@ -33,6 +33,9 @@
 	</div>
 	<!-- A description of the event -->
 	<div id="eventOverviewSection" class="centered">
+	</div>
+
+	<div class="centered hideOnLoaded">
 		<img id="loadingGif" style="width:5%;height:5%;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="Loading ...">
 	</div>
 
