Update form experience

--- a/events/index.html
+++ b/events/index.html
@@ -32,7 +32,7 @@
 		<a class="authLink navRow navItem dtk-href-no-textdec" href="auth/?action=0" target="_top"></a>
 	</div>
 	<!-- A description of the event -->
-	<div id="eventOverviewSection" class="centered">
+	<div id="eventOverviewSection" class="hidden centered">
 	</div>
 
 	<div class="centered hideOnLoaded">
