Form submit behavior

--- a/events/index.html
+++ b/events/index.html
@@ -35,12 +35,12 @@
 	<div id="eventOverviewSection" class="hidden centered">
 	</div>
 
-	<div class="centered hideOnLoaded">
+	<div class="centered hideOnLoaded showOnSubmitting hideOnSubmitted">
 		<img id="loadingGif" style="width:5%;height:5%;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="Loading ...">
 	</div>
 
 	<!-- Form for the event -->
-	<div id="eventContentSection" ></div>
+	<div id="eventContentSection" class="hideOnSubmitting showOnSubmitted" ></div>
 
 </body>
 <!-- Common Scripts -->
