--- a/adventure/index.html
+++ b/adventure/index.html
@@ -51,7 +51,7 @@
 
 	<!-- The back button when looking at content or description -->
 	<div id="subMenuSection" class="hidden showOnContentView showOnDescriptionView hideOnListView showOnError" >
-		<span id="contentTitle" class="hidden centered showOnContentView hideOnDescriptionView"></span> 
+		<span id="contentTitle" class="hidden centered showOnContentView hideOnDescriptionView" onclick="onCopyShortLink()"></span> 
 	</div>
 
 	<!-- The description of this adventure -->
@@ -73,7 +73,6 @@
 		</div>
 		<div id="videoFramePanel"></div>
 	</div>
-
 </body>
 <!-- Stream Embed API -->
 <script src="https://embed.videodelivery.net/embed/sdk.latest.js"></script>
