--- a/adventure/index.html
+++ b/adventure/index.html
@@ -51,7 +51,13 @@
 
 	<!-- The back button when looking at content or description -->
 	<div id="subMenuSection" class="hidden showOnContentView showOnDescriptionView hideOnListView showOnError" >
-		<span id="contentTitle" class="hidden centered showOnContentView hideOnDescriptionView" onclick="onCopyShortLink()"></span> 
+		<span id="contentTitle" class="hidden centered showOnContentView hideOnDescriptionView"></span>
+		<span style="position:absolute; width:20%; font-size:90%;" class="pointer">
+			<span class="shareLink hideOnLinkCopied">
+				<i data-short-link="" class="fa-regular fa-share-from-square shortLink" onclick="onCopyShortLink()"></i>&nbsp;share
+			</span>
+			<span class="hidden showOnLinkCopied">Link copied</span>
+		</span>
 	</div>
 
 	<!-- The description of this adventure -->
